syntax = "proto3";
package evented;
option go_package = "evented";

import "google/protobuf/any.proto";

message Events{
    repeated Event events = 1;
}

message Event {
    string id = 1;
    string user = 2;
    string ts = 3;
    repeated EventSequence bodies = 8;
}

message EventSequence {
    uint32 sequence = 1;
    google.protobuf.Any eventDetails = 2;
}

message Snapshot {
    string id = 1;
    uint32 sequence = 2;
    string ts = 3;
    google.protobuf.Any snapshotDetails = 4;
}

message Command {
    string id = 1;
    string user = 2;
    google.protobuf.Any commandSpecifics=8;
}

message Empty {}

service CommandHandler {
    rpc Handle(Command) returns (Events) {}
    rpc Record(Events) returns (Empty) {}
}


service EventHandler {
    rpc Handle(Event) returns (Events) {}
}

message BusinessCommand {
    Snapshot snapshot = 1;
    Events events = 2;
    Command command = 3;
}

message BusinessResponse {
    Snapshot snapshot = 1;
    Events events = 2;
}

service BusinessLogic {
    rpc Handle (BusinessCommand) returns (BusinessResponse) {}
}